--- a/style.css
+++ b/style.css
@@ -1,21 +1,73 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-* {
-    font-family: 'Roboto', sans-serif;
-}
+
 body {
-    background: #000000;
+    font-family: 'Roboto', sans-serif;
     color: #FFFFFF;
+    font-size: 16px;
+    display: flex;
+    background: #1B1D1C;
+    flex-direction: column;
+}
+header {
+    margin: 0 auto 0 auto;
+    padding-top: 25px;
+    text-align: center;
+    width: 100%;
+}
+header h1 {
+    font-size: 40px;
+    font-weight: bold;
+    padding: 10px;
 }
 main {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    width: 100%;
 }
-main input {
-    width: 10%;
+.input-dos-dados {
+    width: 100%;
+}
+.input-dos-dados div {
+    width: 50%;
+    margin: 15px 0 0 auto;
+}
+.input-dos-dados div input {
+    width: 98%;
     height: 25px;
+    font-size: 14px;
 }
-main button {
-    margin: 10px 0 0 0;
-    width: 10%;
-    height: 45px;
+.input-dos-dados div button {
+    width: 100%;
+    height: 40px;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    background: #FADA06;
+    color: #FFFFFF;
+}
+.input-dos-dados div button:hover {
+    border: none;
+    background: #1B1D1C;
+    border: 1px solid #FADA06;
+}
+.resultado-dos-dados {
+    width: 100%;
+    margin: 50px 0 0 100px;
+    font-size: 30px;
+    font-weight: bold;
+}
+#status-aprovado {
+    display: inline;
+    background: #00bd19;
+}
+#status-reprovado {
+    display: inline;
+    background: #FF0000;
+}
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    text-align: center;
 }
